[package]
name = "montecarlo"
version = "0.1.0"
authors = ["Sveinung Øverland <sveinungg.overlandd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axiom = "0.2.1"
rand = "0.7.3"
serde = "1.0.116"
pbr = "1.0.4"
